O sweetAlert foi adicionado na maioria dos botões de submit

--- a/Views/Clientes/Index.cshtml
+++ b/Views/Clientes/Index.cshtml
@@ -54,10 +54,9 @@
                             </a>
                         </td>
                         <td>
-                            <a class="hyperlink_tabela" href="@Url.Action("DeleteUsuario", "Clientes", new { cpf = cliente.CPF })">
-                                <div class="botao_tabela botao">Remover</div>
-                            </a>
+                            <button class="btn-remover-cliente" data-cpf="@cliente.CPF">Remover</button>
                         </td>
+
                     </tr>
                 }
 
@@ -76,6 +75,8 @@
     @section Scripts {
         <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
         <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
         <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" />
 
     }
