--- a/Views/Materiais/EditarMaterial.cshtml
+++ b/Views/Materiais/EditarMaterial.cshtml
@@ -53,6 +53,8 @@
                 <a href="@Url.Action("EditarCliente", "Clientes", new { cpf = @Model.CPF })" class="btn btn-warning rounded-pill px-4">Editar</a>
             </div> *@
         }
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     </div>
 
 </body>
