--- a/Views/Materiais/Index.cshtml
+++ b/Views/Materiais/Index.cshtml
@@ -55,9 +55,7 @@
                                 </a>
                             </td>
                             <td>
-                            <a class="hyperlink_tabela" href="@Url.Action("DeleteMaterial", "Materiais", new { id = material.Id })">
-                                    <div class="botao_tabela">Remover</div>
-                                </a>
+                                <button class="btn-remover-material" data-id="@material.Id">Remover</button>
                             </td>
                         </tr>
                     }
@@ -77,6 +75,8 @@
             <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
             <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
             <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" />
+            <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 
         }
     </body>
