--- a/Views/Orcamento/Index.cshtml
+++ b/Views/Orcamento/Index.cshtml
@@ -23,9 +23,10 @@
     <!-- barra superior     -->
     <div class="borda_superior">
         <a class="style-botao-a" href="@Url.Action("Index", "Home")">
-            <div class="borda_superior_botao"><p class="texto_botao_borda_superior">Home</p></div>
+            <div class="botao borda_superior_botao"><p class="texto_botao_borda_superior">Home</p></div>
         </a>
     </div>
+    
     <br />
 
     <div class="formulario">
