--- a/Views/Clientes/VisualizarCliente.cshtml
+++ b/Views/Clientes/VisualizarCliente.cshtml
@@ -97,10 +97,10 @@
             <br />
             <button type="submit" class="btn btn-primary rounded-pill px-4">Salvar</button>
 
-            <div class="text-center campo-de-texto">
+            @* <div class="text-center campo-de-texto">
                 <a href="@Url.Action("Index", "Clientes")" class="btn btn-secondary rounded-pill px-4">Voltar</a>
                 <a href="@Url.Action("EditarCliente", "Clientes", new { cpf = @Model.CPF })" class="btn btn-warning rounded-pill px-4">Editar</a>
-            </div>
+            </div> *@
         }
     </div>
 
