--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -217,6 +217,7 @@
 }
 
 .tabela_selecao_materiais {
+    margin-bottom: 15px;
     width: 49%;
 }
 
@@ -225,7 +226,7 @@
 }
 
 .campos-vidros {
-    height:25vh;
+    height:35vh;
 }
 
 .campos-vidros-tabela {
@@ -245,58 +246,7 @@
 }
 
 
-/*style param a visualização defs pedidos*/
-/*.body-pedido {
-    display: flex;
-}
 
-.formulario-simplificado {
-    display: flex;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-    margin: 20px;
-}
-
-.grupo-campos {
-    background: #f5f5f5;
-    padding: 15px;
-    border-radius: 8px;
-    margin-bottom: 15px;
-}
-
-.campo-linha {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-}
-
-.tabela-container {
-    grid-column: 1 / -1;
-    overflow-x: auto;
-}
-
-.acoes-pagamento {
-    display: flex;
-    gap: 10px;
-    align-items: flex-end;
-}
-
-.btn-acao {
-    padding: 8px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.btn-parcela {
-    background: #28a745;
-    color: white;
-}
-
-.btn-adicionar {
-    background: #17a2b8;
-    color: white;
-}*/
 
 
 /* container geral (centralizado e ocupando largura) */
@@ -306,6 +256,10 @@
     margin: 20px auto;
     padding: 0 16px;
     box-sizing: border-box;
+}
+
+.formulario-orcamento {
+    max-width: 90% !important;
 }
 
 /* O FORM é agora o grid principal (2 colunas) */
@@ -417,4 +371,16 @@ h3 {
 
 .endereco {
     min-width: 90%;
+}
+
+.dropdowns {
+    height: 5vh;
+    /*    margin-left: 8%;*/
+/*    padding-bottom: 5px;*/
+    border-bottom: 1px solid black;
+    margin-bottom: 10px;
+}
+
+.item-tabela-selecao {
+    width: 15vw;
 }
