--- a/Views/Orcamento/Index.cshtml
+++ b/Views/Orcamento/Index.cshtml
@@ -149,13 +149,19 @@
                 <div class="item-tabela-selecao">
                     <label class="texto-form">Porcentagem de Lucro (%)</label>
                     <input id="porcentagem-lucro-input" class="input-box texto-form" type="number"
-                           step="1" name="box-input" onchange="recalculaTotal()" />
+                           step="0.01" name="box-input" onchange="recalculaTotal()" />
+                </div>
+
+                <div class="item-tabela-selecao">
+                    <label class="texto-form">Porcentagem de Desconto (%)</label>
+                    <input id="porcentagem-desconto-input" class="input-box texto-form" type="number"
+                           step="0.01" name="box-input" onchange="recalculaTotal()" />
                 </div>
 
                 <div class="item-tabela-selecao">
                     <label class="texto-form">Porcentagem de Aumento nas Parcelas (%)</label>
                     <input id="porcentagem-parcela-input" class="input-box texto-form" type="number"
-                           step="1" name="box-input" onchange="recalculaTotal()" />
+                           step="0.01" name="box-input" onchange="recalculaTotal()" />
                 </div>
             </div>
 
@@ -225,9 +231,15 @@
             </div>
         </div>
         <br />
-        <p>Custo: <span id="valorTotal">0.00</span></p>
-        <p>Valor Total: <span id="valor-total-pct">0.00</span></p>
-        <p>Valor Parcela: <span id="valor-total-parcela">0.00</span></p>
+
+        <div>
+            <div>
+                <p>Custo: <span id="valorTotal">0.00</span></p>
+                <p>Valor Total: <span id="valor-total-pct">0.00</span></p>
+                <p>Valor Parcela: <span id="valor-total-parcela">0.00</span></p>
+            </div>
+            
+        </div>
 
         <br />
         <button id="btnSalvar" data-save-url="@Url.Action("Salvar", "Orcamento")">Salvar Orçamento</button>
@@ -236,8 +248,9 @@
         <script>
                 window.onload = function () {
                 atualizarCampos();
-                document.getElementById("porcentagem-lucro-input").value = 30;
-                document.getElementById("porcentagem-parcela-input").value = 10;
+                document.getElementById("porcentagem-lucro-input").value = 30.00;
+                document.getElementById("porcentagem-parcela-input").value = 10.00;
+                document.getElementById("porcentagem-desconto-input").value = 0.00;
                 // atualizarCampos();
                 atualizarPrecoVidro();
             };
