--- a/Views/Pedidos/VisualizaPedido.cshtml
+++ b/Views/Pedidos/VisualizaPedido.cshtml
@@ -77,7 +77,7 @@
                     </div>
                     <div class="campo-linha">
                         @Html.LabelFor(model => model.ParcelasPagas, "Parcelas Pagas", new { @class = "texto-form" })
-                        @Html.TextBoxFor(model => model.ParcelasPagas, new { @class = "parcelas-pagas-input input-box texto-form", @id = "parcelas-pagas-input", type = "number", onchange = "calculaValorParcela()" })
+                        @Html.TextBoxFor(model => model.ParcelasPagas, new { @class = "parcelas-pagas-input input-box texto-form", @id = "parcelas-pagas-input", type = "number", onchange = "calculaValorParcela()", min="0" })
                     </div>
                     <div class="campo-linha">
                         @Html.LabelFor(model => model.ValorParcelas, "Valor Parcelas", new { @class = "texto-form" })
@@ -87,7 +87,7 @@
                     <div class="acoes-pagamento">
                         <div class="campo-linha">
                             @Html.LabelFor(model => model.ValorPago, "Valor Pago", new { @class = "texto-form" })
-                            @Html.TextBoxFor(model => model.ValorPago, new { @class = "valor-pago-input input-box texto-form", @id = "valor-pago-input", type = "number", step = "0.01", onchange = "calculaValorParcela()" })
+                            @Html.TextBoxFor(model => model.ValorPago, new { @class = "valor-pago-input input-box texto-form", @id = "valor-pago-input", type = "number", step = "0.01", onchange = "calculaValorParcela()", min="0" })
                             <button type="button" class="btn-acao btn-parcela" onclick="somarValor(1)">Pagar Parcela</button>
                         </div>
 
@@ -109,26 +109,27 @@
                                                 @id = "MaoDeObra",
                                                     type = "number",
                                                     step = "0.01",
-                                                onchange = "reduzTotal(); formatarValor(this);"
+                                                onchange = "reduzTotal(); formatarValor(this);",
+                                                min="0"
                                 })
                         </div>
                     </div>
                     <div class="campo-linha">
                         <label class="texto-form">Porcentagem de lucro</label>
-                    @Html.TextBoxFor(model => model.PorcentagemLucro, new { @class = "porcentagem-lucro-input input-box texto-form", @id = "porcentagem-lucro-input", type = "number", step = "0.01", onchange = "calculaValorParcela()" })
+                    @Html.TextBoxFor(model => model.PorcentagemLucro, new { @class = "porcentagem-lucro-input input-box texto-form", @id = "porcentagem-lucro-input", type = "number", step = "0.01", onchange = "calculaValorParcela()", min = "0" })
                     @* @Html.TextBoxFor(model => model.PorcentagemLucro, new { @class = "porcentagem-lucro-input input-box texto-form", @id = "porcentagem-lucro-input", type = "number", step = "1", onchange = "calculaValorParcela()" }) *@
                     </div>
 
                     <div class="campo-linha">
                         <label class="texto-form">Porcentagem de Desconto</label>
-                    @Html.TextBoxFor(model => model.PorcentagemDesconto, new { @class = "porcentagem-desconto-input input-box texto-form", @id = "porcentagem-desconto-input", type = "number", step = "0.01", onchange = "reduzTotal()" })
+                    @Html.TextBoxFor(model => model.PorcentagemDesconto, new { @class = "porcentagem-desconto-input input-box texto-form", @id = "porcentagem-desconto-input", type = "number", step = "0.01", onchange = "reduzTotal()", min = "0" })
                     </div>
 
                     <div class="campo-linha">
                         <label class ="texto-form">Porcentagem Adicional do Valor Parcelado</label>
                     @Html.TextBoxFor(model => model.PorcentagemParcela, new {
                         @class = "porcentagem-parcela-input input-box texto-form", @id = "porcentagem-parcela-input",
-                        type = "number", step = "0.01", onchange = "calculaValorParcela()" })
+                                        type = "number", step = "0.01", onchange = "calculaValorParcela()", min = "0" })
                     </div>
                 </div>
             </div>
