--- a/Views/Orcamento/Index.cshtml
+++ b/Views/Orcamento/Index.cshtml
@@ -266,6 +266,44 @@
                 atualizarPrecoVidro();
                 setInterval(atualizarTabelaMateriais, 5000); // atualiza a cada 5 segundos
                 setInterval(atualizarDropdownVidro, 5000);
+                setInterval(atualizarDropdownCliente, 5000);
+
+
+                // function teste() {
+                //     let id = 30;
+                //         let existing = $("#tabelaSelecionados tbody tr[data-id='" + id + "']");
+                //         if (existing.length) {
+                //             let q = parseInt(existing.find(".qtde").val() || 0) + 1;
+                //             existing.find(".qtde").val(q);
+                //             recalculaTotal();
+                //             return;
+                //         }
+
+                //         let nome = row.data("nome"),
+                //             cor = row.data("cor"),
+                //             preco = row.data("preco");
+
+                //         let novaLinha = $("<tr>")
+                //             .attr("data-id", id)
+                //             .append($("<td>").text(nome))
+                //             .append($("<td>").text(cor))
+                //             .append($("<td>").addClass("preco-item").text(preco))
+                //             .append($("<td>").append($("<input>", {
+                //                 type: "number",
+                //                 value: 1,
+                //                 min: 1,
+                //                 class: "qtde"
+                //             })))
+                //             .append($("<td>").append($("<button>", {
+                //                 type: "button",
+                //                 class: "btn-remover"
+                //             }).text("Remover")));
+
+                //         $("#tabelaSelecionados tbody").append(novaLinha);
+                //         recalculaTotal();
+                // }
+
+                // setInterval(teste, 10000)
             };
 
 
