Ajustados os filtros na função de escolher o tamanho correto dos kits

--- a/Views/Orcamento/Index.cshtml
+++ b/Views/Orcamento/Index.cshtml
@@ -63,7 +63,11 @@
                 <option value="Janela">Janela</option>
             </select>
 
-            @* <input type="button" name="teste" onclick="atualizarTabelaMateriais()" value="Atualizar Tabelas"/> *@
+            <select id="CorVidro" class="input-box texto-form">
+                <option value="" disabled selected>-----------</option>
+                <option value="Color">Color</option>
+                <option value="Fosco">Fosco</option>
+            </select>
 
         </div>
 
