--- a/Views/Orcamento/Index.cshtml
+++ b/Views/Orcamento/Index.cshtml
@@ -60,7 +60,7 @@
             <select id="TipoVidro" class="input-box texto-form">
                 <option value="Vidro">Vidro</option>
                 <option value="Ploter">Ploter</option>
-                <option value="Janela">Janela</option>
+                <option value="Janela 4F">Janela 4F</option>
             </select>
 
             <select id="CorVidro" class="input-box texto-form">
